Updated the images in assets folder

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="./logo.png" alt="" width="50" height="50" class="d-inline-block align-text-top">
+          <a class="navbar-brand" href="#"><img src="./assets/images/logo.png" alt="" width="50" height="50" class="d-inline-block align-text-top">
             iCharge</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -57,7 +57,7 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="./greencar.png" alt="">
+        <img src="./assets/images/greencar.png" alt="">
         <div class="container">
           <div class="carousel-caption text-end text-light">
             <br>
@@ -66,7 +66,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./car-6943451.jpg" alt="">
+        <img src="./assets/images/car-6943451.jpg" alt="">
         <div class="container">
           <div class="carousel-caption text-light">
             <br>
@@ -76,7 +76,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./car-6943487.jpg" alt="">
+        <img src="./assets/images/car-6943487.jpg" alt="">
 
         <div class="container">
           <div class="carousel-caption text-end text-dark">
@@ -107,21 +107,21 @@
     <!-- Three columns of text below the carousel -->
     <div class="row">
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="25" height="140" xmlns="http://www.w3.org/2000/svg" src="./logo.png" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><img src="circle1.png" class="rounded-circle" alt="Cinque Terre"></svg>
+        <svg class="bd-placeholder-img rounded-circle" width="25" height="140" xmlns="http://www.w3.org/2000/svg" src="./assets/images/logo.png" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><img src="./assets/images/circle1.png" class="rounded-circle" alt="Cinque Terre"></svg>
 
         <h4><strong>Search Nearby Charging Stations</strong></h4>
         <p>You can now search nearby charging stations from your current locations and can also see how many charging slots are available at that place.</p>
         <p><a class="senow" href="./book/Index.html">Search Now</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="25" height="155" xmlns="http://www.w3.org/2000/svg" src="./logo.png" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><img src="circle2.png" class="rounded-circle" alt="Cinque Terre"></svg>
+        <svg class="bd-placeholder-img rounded-circle" width="25" height="155" xmlns="http://www.w3.org/2000/svg" src="./logo.png" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><img src="./assets/images/circle2.png class="rounded-circle" alt="Cinque Terre"></svg>
 
         <h4><strong>Book Time-Slot for Charging</strong></h4>
         <p>Now, You can also book time-slot for charging your vehicle in-advance.</p>
         <p><a class="boknow" href="./book/Index.html">Book Now</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="25" height="100" xmlns="http://www.w3.org/2000/svg" src="./logo.png" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><img src="circle3.png" class="rounded-circle" alt="Cinque Terre"></svg>
+        <svg class="bd-placeholder-img rounded-circle" width="25" height="100" xmlns="http://www.w3.org/2000/svg" src="./assets/images/logo.png" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><img src="./assets/images/circle3.png" class="rounded-circle" alt="Cinque Terre"></svg>
 
         <h4><strong>Prime Membership</strong></h4>
         <p>Get Prime Membership with One-Time yearly payment and you can enjoy special extra charging machine at each charging station in the world.</p>
@@ -137,7 +137,7 @@
 <div class="container-fluid">
   <h1 class="services">Our Stations</h1>
   <br>
-  <img src="./map.png" alt="" width="700px" height="500px">
+  <img src="./assets/images/map.png" alt="" width="700px" height="500px">
   <div class="right-text">
   <h2>Network of Electric Charging Stations</h2>
   <br>
