--- a/signup/index.html
+++ b/signup/index.html
@@ -12,27 +12,28 @@
     <div class="title">
       Registration Form
     </div>
+    <form action="/signup" method="post">
     <div class="form">
        <div class="inputfield">
           <label>First Name</label>
-          <input type="text" class="input">
+          <input type="text" class="input" name="fname">
        </div>  
         <div class="inputfield">
           <label>Last Name</label>
-          <input type="text" class="input">
+          <input type="text" class="input" name="lname">
        </div>  
        <div class="inputfield">
           <label>Password</label>
-          <input type="password" class="input">
+          <input type="password" class="input" name="pass">
        </div>  
       <div class="inputfield">
           <label>Confirm Password</label>
-          <input type="password" class="input">
+          <input type="password" class="input" name="cpass">
        </div> 
         <div class="inputfield">
           <label>Gender</label>
           <div class="custom_select">
-            <select>
+            <select name="gender">
               <option value="">Select</option>
               <option value="male">Male</option>
               <option value="female">Female</option>
@@ -41,19 +42,19 @@
        </div> 
         <div class="inputfield">
           <label>Email Address</label>
-          <input type="text" class="input">
+          <input type="text" class="input" name="email">
        </div> 
       <div class="inputfield">
           <label>Phone Number</label>
-          <input type="text" class="input">
+          <input type="text" class="input" name="pnumber">
        </div> 
       <div class="inputfield">
           <label>Address</label>
-          <textarea class="textarea"></textarea>
+          <textarea class="textarea" name="address"></textarea>
        </div> 
       <div class="inputfield">
           <label>Postal Code</label>
-          <input type="text" class="input">
+          <input type="text" class="input" name="pcode">
        </div> 
       <div class="inputfield terms">
           <label class="check">
@@ -66,6 +67,7 @@
         <input type="submit" value="Register" class="btn">
       </div>
     </div>
+  </form>
 </div>	
 	
 </body>
